# ChangeLog for net-misc/radvd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/radvd/ChangeLog,v 1.127 2015/02/16 19:45:45 prometheanfire Exp $

*radvd-2.10 (16 Feb 2015)

  16 Feb 2015; Matthew Thode <prometheanfire@gentoo.org> +radvd-2.10.ebuild:
  bup

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> radvd-1.15.ebuild,
  radvd-1.9.8.ebuild, radvd-2.5.ebuild, radvd-2.8.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

*radvd-2.8 (10 Oct 2014)

  10 Oct 2014; Michael Weber <xmw@gentoo.org> +files/radvd.tmpfilesd,
  +radvd-2.8.ebuild, -radvd-2.3.ebuild, files/radvd.service:
  Version bump (bug 524312), address systemd issues (bug 524000).

*radvd-2.5 (22 Aug 2014)

  22 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> +radvd-2.5.ebuild:
  bup and possible fixes for bug 518814 and bug 520332

*radvd-2.3 (30 Jul 2014)

  30 Jul 2014; Michael Weber <xmw@gentoo.org> +radvd-2.3.ebuild:
  Version bump

*radvd-1.15 (30 Jul 2014)

  30 Jul 2014; Michael Weber <xmw@gentoo.org> +radvd-1.15.ebuild,
  -files/radvd-1.9.2-sysctl.patch, -radvd-1.9.1-r1.ebuild,
  -radvd-1.9.2-r1.ebuild, -radvd-1.9.3.ebuild, -radvd-1.9.5.ebuild,
  -radvd-1.9.7.ebuild:
  Version bump, drop old.

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org> radvd-1.9.8.ebuild:
  Stable for ppc, wrt bug #502906

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> radvd-1.9.8.ebuild:
  Stable for sparc, wrt bug #502906

  09 Mar 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> radvd-1.9.8.ebuild:
  x86 stable wrt bug #502906

  08 Mar 2014; Markus Meier <maekke@gentoo.org> radvd-1.9.8.ebuild:
  arm stable, bug #502906

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> radvd-1.9.8.ebuild:
  amd64 stable, bug #502906

  05 Mar 2014; Jeroen Roovers <jer@gentoo.org> radvd-1.9.8.ebuild:
  Stable for HPPA (bug #502906).

  18 Feb 2014; Matthew Thode <prometheanfire@gentoo.org> files/radvd-1.9.1.init: