@@ -8,29 +8,21 @@ AUX radvd.tmpfilesd 30 SHA256 da69653b29db8af0f757d9f968882db566c4284a4cc9d7d295
 DIST radvd-1.15.tar.gz 185528 SHA256 ba2e16bf0b2ac0030aacb0927304603f7ebbd317fdf30a24ee6f9ba06428391d SHA512 39d7ad22b25b36ab8079e9a48f50f69ea2be8a02d2e76638940c5eb769bf9291f28d275d7799296009e3c61bcb106c276bc5c60c9090951ea9f2dc7e00945ba7 WHIRLPOOL 3620518e71a243335cf8e064b4f3c45d80ec2e2d94748caa8ccaf3e0f317ffb3244ae719f07008abd65763f3ebc0110e2d5d5f570f1569b8377f70e0a9dfecc4
 DIST radvd-1.9.8.tar.gz 176288 SHA256 645ccf1c9b16e769ff4179813712e580e2c8786d64a888d8afa1e296c057c1c1 SHA512 25ffa2fe1289ee826432ade3846aa5008e34ff9f0cbe954bf44ebae22198de59b40b7b4a70d19c74117b3280a7ca6a4bf740536f4a08e0bf169e760748548971 WHIRLPOOL 228182cb6fdc6065a728f679ee6d93286c48f186b209b6ff8d553f06317d0e799687c5abf0179cda5c42d2ca72ca32bdacbc31e0a14a06d18316a6538eb09017
 DIST radvd-2.10.tar.gz 202426 SHA256 b41867c5b0375f786bebbd3fc88776d41927aa392eeba954e4b88f8ec7e8f13e SHA512 cfc34ad414bd07e22519982f8c3fa75cb27eab54131d0af09d6dd5fbb69da3de26fda776593e1a4e2735b63fc7cc2224663665854895d8be459f43ba4012fa26 WHIRLPOOL 5689d137313e75e30f370637bc92f4e242f2a4e2675b0ee34f1824a66e7efcf4ad683e121375623b62f015dd59a664511f2dbcff229c70a9d55c083dc7fef98f
+DIST radvd-2.11.tar.gz 202596 SHA256 80ad60b15689e9591a5af393a57a1d93304deeff2e46482f0fd98046c00622f8 SHA512 35fc641b81cc76de677c8e55a61c8b28d9167d8f40a3fa7adf2a254293ca2d7856ca2c8f6d3bdba391bf873345d3019c0f572ee166eaba011ae874b176c85d4b WHIRLPOOL 058ecf265881963e44267945349e56f1b5bb402b8e4605bd852a8e3ced00419e0028eee70028819433bbc7d596f938d94fef1145ea615c66a975feb9fe4aa56c
 DIST radvd-2.5.tar.gz 201436 SHA256 942fb19342390045019f168535eadda268010df4dc9534fd46adc1a858418e1e SHA512 f1ff5bb3ae37dad76fce5937d2101cb88fa12938b8ceb950f22f7f5c5b7d1565a52ca0527892fe279ac7c0540d26652c2634f6aa674396efe6d7836dbbf4574f WHIRLPOOL cba6f12c2df48b32d21cc664e5e06a7a3958e29f141700f3b0774664746583639eecb50eb56440e64ab9ece5cf8b8d167032a277c7b03d2a7acabde26dfdef85
 DIST radvd-2.8.tar.gz 202261 SHA256 f668e190369132de8b425013e204f947cb02db3798fd2ba193f28d7fb237e050 SHA512 72f0c2e042bc9219af2776e2e307181bab526d3284917da469ce4481ba93433513889ccc48b77bc6b74c680252f984c319d032fdfdb5aabe40510b1eefb9f691 WHIRLPOOL bb056c5938cc2732035089a19ef6f567927962bf2f97e689edc5bded45cb1aa36f3ca9ed56b85c11593e06100e8fdd00d6e3da564c9e8514103d07203bf9677d
 EBUILD radvd-1.15.ebuild 1679 SHA256 4ae18a1b4dacbb2185e79f56209852298183b3ce374ecd427368772c68c898a1 SHA512 03e85095f367cbd20259306f97756d1e76e79c2e897af06670a6462b9302e5f206eb7e89eccde3a9d8b849e2e5c9d8c42869b0071bac25379119c1cf36a51dd6 WHIRLPOOL e57c9e7149a071c6187884fe8c59f189b266c7cf71f4597ad9febf25d9b0be878453eaf981b7b1ab938f6553dd2da8e67044a3cdb438c4ac06491706f8649b89
 EBUILD radvd-1.9.8.ebuild 1643 SHA256 51d7add99f5b3f9c128e9517418acc6671890f70f524176b155e6dd2f29c5838 SHA512 f7748af82b4f6ab4568258fc867e690a33418446697966988503a99d99bf639d400e04a98657e71c2c8c01c18b5114666e8bbe05c2438f1c0c9bdfbc01679d9c WHIRLPOOL 3c9cb2fcbaedfd775cd65413c67b16cc24b68a2b77d5d0404490757ccd6b5fe5d66635b8216a82f4243521e038717cd6a5da1c4d0abf5427f8078bde6de18a20
 EBUILD radvd-2.10.ebuild 1774 SHA256 f6e50e0faa28d0becc1b52170f6557efe277d1f359d4ac7ae62a22c49fe65d2a SHA512 d353117fe64fe4d8cd26a89ac481594a91cd77cff82bde0e5f2a0623d3a4f76dd2b669eb81f1a5d91463550593a742db2c33aa3a7e05984b6f3356cc4b4a2c91 WHIRLPOOL 61ea489f78b0499ab9cd56a467af69f8be49bb57ef0f47f64fecf4d803473d84904b2cb828dfd8930c0a11ae22ec722040305d0ed3c8b2dd3c1a1e0f6d4eb447
+EBUILD radvd-2.11.ebuild 1805 SHA256 a37da30247822dfeecb8db986b7136ffef0f6d70c47eac29686981727dae1b16 SHA512 7ac7efc5cb352fc9ef033483a115e1be3d7bb7d407a6aaaaa77dad6d96637a2e04aa42974beacd228575e4b0956d47e8a375a3db2ab9fb08a0472ec64e50fa2d WHIRLPOOL 78d0688667b1567b76a565607741125c97316332dd8ec182ea9f10e8b203eb86b2ba775bfcac5c8b923ac80e5b8e017d48ecb324d21c036a2330a9adce36d6db
 EBUILD radvd-2.5.ebuild 1691 SHA256 5026b96bcf6652dd50770511124d92068131ebe186516ebbb5acb77190aa1ba9 SHA512 b08c0cd36659f72bc9ccaa1d17346fee5e043abab5f2357446d8dc745d686e579dc8485237c49481b385757787aaa2920f01cd947a48fa3c2466d575ffa8478b WHIRLPOOL ec4099bb8f577105d820e07cb3c2060c8cb3767524689cc754e045c1b7413af5ba12c342dbd2f9e62c60bba244837569f0bf6cecab24baf76021acb6daf6baf3
 EBUILD radvd-2.8.ebuild 1764 SHA256 5a32d2c1c03c2f94693f870109bf46b9af7b12cfc0f90e37dc14f2ccef32d3e4 SHA512 d56397918f68acf11ab5e9f35aa1ab8db7e3df4925850b9079be2e61e0bcb20187771c84e59e9efe48dfaea8f407c34120c1877fbb36429b35dd1699406990d2 WHIRLPOOL 105153abfa0f6df222af2687bf89776e01e28d75f52f06438c853612af23d66965019b5fce55b6a5ddf8ee5cbb20f8b934dde56cc18d55f68159b5baf456a62f
-MISC ChangeLog 16503 SHA256 069f0b453785c997ee9f2f3bb48f1e1faddacff60f127d8a34e8264918a9935b SHA512 68561d9f3a8ca6f0a741ccf2f3aa96bc408b8bd83b295d3228a03bf7b772a0e2090ba20744e14e4f53eb9b1dc2673971e3e067627f164a6be4ec7cbb680dc132 WHIRLPOOL 3f8015a742856720655780f9f27853b6b394ef9abf464d78c744014218c435eecec2a4631b33659a447102f79ee738e49be1d15b64bd120afa5741a4be962a5c
+MISC ChangeLog 16601 SHA256 35e9f1c7154316581775bec4001947cb0a8169e5f9c8da36c9874bbbbed178e0 SHA512 5853a9e1a7106aa3a36006cdeefdea6f656e12dae3d54fbc23e41b73294d73c71e3f3f952abcbf22fd62392d6f631c4b87781248a9888fb8891908b85e308620 WHIRLPOOL ce2c3e5972b2e10e5fd422628a0e761f544e3f5c7884bc90b8e374942dd2835bd0993e9c59028dc066627a39775bbadb0690691ea26b9744e0182d12e7a8db4c
 MISC metadata.xml 330 SHA256 40f8466e0dfb2770a66eddc657185e34a39dc389419a758b183a1d229a47e0bd SHA512 e8bdd24745abdcf8129f8fae83b8397bc762ae1cc1010b271a7f5647eed8ccf65a15f7b761d32fb250676a3e081dbe3395fc82934276b73c5595b35ff2e8da80 WHIRLPOOL 2ec6a85e151014a9156007b3e9fc9d3b43aa43dcbd59aeec6de21c94df4e2a4e1b65fc828905c57a62b06ace6aaf1b3cd23e314426d4a0a719b1f61bfccd5ea9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU4kkLAAoJEGSje+quGaToPDwP/R2+C2rLCdF7a82JfUZ474gP
-oMS+Ut1MU/KcaoNLfpgdva20G4ZiVIPl7LtZQwtpmTM6ebas9gFyyUphXru91s+q
-AP3er0ne85wzFXcCE6ufVk7AAJG1XQje7SaoquK/Ch9l2w1v1bMeKKrbtpvJAQ8b
-3QCjRtTqWK0P1BkAepbSqk20SMEypbm6/81N+0o3ccDosbLWg1EAuCnTUogJlIQO
-RMrzD1q9j4dtddRhK5OL18yKlrnQgZP6IHtEmEK+5qYSDHwE3gSEfMqu+F/bj1Do
-21XZ565COGCQj2d9CxDW94Rv8Xuza7ySO7+/c8UC2YRJiPwsXZJCt4IFJD+AIaza
-FywAWhr0Hdft3vMNaUUNZHiaimvZe6kgSnhxqbU31q7tU6n5OxMVTlZC5j07Z8SH
-JinXgI/12ZW2XpXx8LdyZ61SDkHnDlSP59CxN3iA1uxuqVXYD52s5V+c95YeYgHV
-2mKwsOEFJKlvbwvhxK9t75x35aRBE7isdgDYUFVGsT/r7k2pdCDjLwwXUTKIJp0J
-TSeG397Q6Fi0Mp8DGxRfAMxHLlig7v0F1RJXSi/n3wgOtVegxLtzRYCTI+Aqhvj4
-nPc87/pXzCXRJnWwaONZ1l8bGW7iUOxbfsaZDMHLKwzZ2k4FmPF2pCtbmuU3A3GJ
-r93I+6gWeQD5Qh9Rh21U
-=n95L
+iF4EAREIAAYFAlU5ndUACgkQknrdDGLu8JCv+QD/S2m7GvLjzHriOBSm0a0cqwMB
+KEmNVRZxdpBSl1npTh8BAI5BzbImPy9DgIhZSbh8t32YpxClbbKKmj8iQFXo5PIk
+=hS9L
 -----END PGP SIGNATURE-----
